Reimplement Tag endpoint after merging with Develop where it was moved to Configurator
